# atem_experimental

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
AtemIR/include/: AtemIR.td  AtemIRDialect.td  AtemIROps.td  CMakeLists.txt
AtemIR/lib/: CMakeLists.txt
AtemIR/tools/: atemir-opt.cpp
atemc/: CMakeLists.txt
atemc/AtemIR/: CMakeLists.txt
atemc/AtemIR/Dialect/include/: AtemIR.td  AtemIRAttrs.h  AtemIRAttrs.td  AtemIRDialect.h  AtemIRDialect.td  AtemIROpEnums.h  AtemIROpEnums.td  AtemIROps.h  AtemIROps.td  AtemIRTypes.h  AtemIRTypes.td  CMakeLists.txt
atemc/AtemIR/Dialect/lib/: AtemIR.cpp  AtemIRAttrs.cpp  AtemIROpEnums.cpp  AtemIROps.cpp  AtemIRTypes.cpp  CMakeLists.txt
atemc/AtemIR/Dialect/tools/: CMakeLists.txt  atemir-opt.cpp
atemc/AtemIR/Interfaces/: AtemIRFPTypeInterface.h  AtemIRFPTypeInterface.td  CMakeLists.txt
atemc/AtemIR/Interfaces/include/: AtemIRFPTypeInterface.h  AtemIRLoopOpInterface.h  AtemIRLoopOpInterface.td  CMakeLists.txt
atemc/AtemIR/Interfaces/lib/: AtemIRFPTypeInterface.cpp  AtemIRLoopOpInterface.cpp  CMakeLists.txt
atemc/AtemIR/include/: AtemIR.td  AtemIRAttrs.h  AtemIRAttrs.td  AtemIRDialect.h  AtemIRDialect.td  AtemIROps.h  AtemIROps.td  AtemIRTypes.h  AtemIRTypes.td  CMakeLists.txt
atemc/AtemIR/lib/: AtemIR.cpp  AtemIRTypes.cpp  CMakeLists.txt
atemc/AtemIR/tools/: CMakeLists.txt  atemir-opt.cpp
atemc/Exceptions/: Atemc.Exceptions.cppm
atemc/Grammar/: AtemLexer.g4  AtemParser.g4
atemc/Lexer/: Atemc.Lexer.cppm
atemc/Lexer/ANTLR4Lexer/: Atemc.Lexer.ANTLR4Lexer.ErrorListener.cppm  Atemc.Lexer.ANTLR4Lexer.cppm
atemc/Main/: Atemc.Main.cppm
atemc/Parser/: Atemc.Parser.cppm
atemc/Parser/ANTLR4Parser/: Atemc.Parser.ANTLR4Parser.ErrorListener.cppm  Atemc.Parser.ANTLR4Parser.Listener.cppm  Atemc.Parser.ANTLR4Parser.Visitor.cppm  Atemc.Parser.ANTLR4Parser.cppm
atemc/Utils/: Atemc.Utils.Unimplemented.cppm  Atemc.Utils.cppm
modules/: CMakeLists.txt
modules/Main/: Atemc.Main.ixx
test/AtemIR/: ArithmeticAndComparisonOperation.mlir  ConstantOperation.mlir  ControlFlowOperation.mlir  Fibonacci.mlir  IfOperation.mlir  MemoryOperations.mlir  WhileOperation.mlir
test/Parse/: fibonacci.atem
